<resources>

    <string name="app_name">Aplikasi Koperasi Masjid</string>
    <string name="title_cooperative_name">Koperasi Masjid \n AT- TAQWA \n Alamanda Regensi</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="dont_have_an_account">Belum Punya Akun ?</string>
    <string name="register_now">Daftar Sekarang</string>
    <string name="register">DAFTAR AKUN</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="no_phone">Nomor HP</string>
    <string name="next">LANJUT</string>
    <string name="enter_verification_code">Masukan Kode Verifikasi</string>
    <string name="dont_recieve_sms">Belum Mendapatkan SMS ?</string>
    <string name="resend">Kirim Ulang SMS</string>
    <string name="verification">VERIFIKASI</string>
    <string name="email">Email</string>
    <string name="address">Alamat</string>
    <string name="birth_date">Tanggal Lahir</string>
    <string name="success_register">Selamat,  Akun anda sudah terdaftar</string>
    <string name="go_to_home">PERGI KE BERANDA</string>
    <string name="home">Beranda</string>
    <string name="transaction">Transaksi</string>
    <string name="cart">Keranjang</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profil</string>
    <string name="cooperative_name">KOPERASI MASJID AT-TAQWA</string>
    <string name="update_password">UBAH PASSWORD</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="old_password">Password Lama</string>
    <string name="hint_password">********</string>
    <string name="new_password">Password Baru</string>
    <string name="password_confirmation">Konfirmasi Password</string>
    <string name="btn_save">SIMPAN</string>
    <string name="product_name">Nama Produk</string>
    <string name="add_to_chart">TAMBAH KE KERANJANG</string>
    <string name="search_hint">Cari ...</string>
    <string name="camera_access_required">Camera access is required to display the camera preview.</string>
    <string name="organization_logo">Organization Logo</string>
    <string name="background_mosque">Background Mosque</string>
    <string name="muslim_handshake">Muslim Handshake</string>
    <string name="register_photo">Register Photo</string>
    <string name="add">+</string>
    <string name="not_null">Tidak Boleh Kosong</string>
    <string name="wrong_password">password salah</string>
    <string name="username_not_found">Username tidak ditemukan</string>
    <string name="username_already_registered">Username Sudah terdaftar</string>
    <string name="code_send_to">Kode dikirim ke nomor</string>
    <string name="phone_code">+62</string>
    <string name="SELECTED_MENU">selected_menu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_date">CHOOSE DATE</string>
    <string name="date_hint">31-12-2000</string>
    <string name="wrong_username_password">Username / Password Salah</string>
    <string name="verification_success">Verifikasi Berhasil</string>
    <string name="update_profile">Update Profile</string>

    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s
        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised
        in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
        publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="network_not_connect">Periksa Jaringan anda</string>
    <string name="succes_add_to_cart">Berhasil ditambahkan ke keranjang</string>
    <string name="succes_add_to_wishlist">Berhasil menambahkan ke favorite</string>
    <string name="fail_add_to_wishlist">Gagal menambahkan ke Favorite</string>

    <string name="network_error">Please try again. Network not responding</string>
    <string name="desc">deskripsi</string>
    <string name="check_connection">Check Your Connection</string>
    <string name="user_image_filename">user_image_</string>
    <string name="password_not_equal">Password tidak sama</string>
    <string name="logout">Log Out</string>
    <string name="listcart">Daftar Belanja</string>
    <string name="total_price">Total Harga</string>
    <string name="dummy_price">Rp. 99.999</string>
    <string name="order_now">Pesan Sekarang</string>
    <string name="listtransaction">Daftar Transaksi</string>
    <string name="nomor_transaksi">Nomor Transaksi</string>
    <string name="date_order">Tanggal Order</string>
    <string name="lihat_detail">Lihat Detail</string>
    <string name="status">Status</string>
    <string name="total_order">Total Order</string>

</resources>
