<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_colour"
    tools:context=".view.registerone.RegisterOneAct">


    <ImageView
        android:id="@+id/logo_koperasi"
        android:layout_width="56dp"
        android:layout_height="54dp"
        android:src="@drawable/img_cooperative_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="18dp"
        android:layout_marginStart="27dp"
        />
    <LinearLayout
        android:id="@+id/judul_koperasi2"
        app:layout_constraintStart_toEndOf="@id/logo_koperasi"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/judul_koperasi"
            android:text="@string/title_cooperative"
            style="@style/subheader"
            />

        <TextView
            android:id="@+id/nama_koperasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_cooperative_name"
            android:textSize="20sp"
            android:fontFamily="@font/montmedium"
            android:textColor="@color/color_one"
            />

        <TextView
            android:id="@+id/alamat_koperasi"
            android:text="@string/title_cooperative_address"
            style="@style/subheader"
            />
    </LinearLayout>



    <TextView
        android:id="@+id/judul_layout"
        android:text="@string/register"
        style="@style/header.color_three"
        app:layout_constraintTop_toBottomOf="@+id/judul_koperasi2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />
    <ImageView
        android:id="@+id/background_masjid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_mosque"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="-20dp"
        android:alpha="0.5"/>

    <ImageView
        android:id="@+id/muslimhandshake"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/img_muamalah"
        app:layout_constraintTop_toTopOf="@id/background_masjid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="170dp"
        android:alpha="0.6"/>

    <LinearLayout
        android:background="@drawable/bg_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        app:layout_constraintTop_toBottomOf="@id/judul_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:padding="24dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/full_name"
            style="@style/body"/>
        <EditText
            android:id="@+id/edt_name"
            style="@style/input.text"
            android:layout_marginTop="4dp"/>

        <TextView
            android:text="@string/no_phone"
            style="@style/body"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/edt_no_phone"
            style="@style/input.text"
            android:inputType="number"
            android:layout_marginTop="4dp"/>

        <TextView
            android:text="@string/username"
            style="@style/body"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/edt_username"
            style="@style/input.text"
            android:layout_marginTop="4dp"/>
        <TextView
            android:text="@string/password"
            style="@style/body"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/edt_password"
            style="@style/input.text"
            android:inputType="textPassword"
            android:layout_marginTop="4dp"/>

        <Button
            android:id="@+id/btn_register1_lanjut"
            android:layout_marginTop="18sp"
            style="@style/btn_primary.gold"
            android:text="@string/next"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>