<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.updatepassword.UpdatePasswordAct">

    <include
        android:id="@+id/top_bar_layout"
        layout="@layout/layout_top_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:orientation="vertical"
        tools:context=".view.updatepassword.UpdatePasswordAct">

        <TextView
            android:id="@+id/tv_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            style="@style/body"
            android:textStyle="bold"
            android:textColor="@color/color_one"
            android:layout_marginTop="10dp" />
        <EditText
            android:id="@+id/edt_new_password"
            style="@style/input.maroon.text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/hint_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />
        <View
            android:id="@+id/view_border_two"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_btn_primary_maroon" />

        <TextView
            android:id="@+id/tv_password_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_confirmation"
            style="@style/body"
            android:textStyle="bold"
            android:textColor="@color/color_one"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/edt_password_confirmation"
            style="@style/input.maroon.text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/hint_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <View
            android:id="@+id/view_border_three"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_btn_primary_maroon" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            style="@style/btn_primary.maroon"
            android:text="@string/btn_save"/>
    </LinearLayout>
</LinearLayout>