<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.updateprofile.UpdateProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:padding="34dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/old_password"
            style="@style/body.bold.maroon"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/edt_old_password"
            style="@style/input.maroon.text"
            android:inputType="textPassword"
            tools:ignore="Autofill,LabelFor"
            android:layout_marginTop="8dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_four"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            style="@style/body.bold.maroon"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/edt_new_password"
            style="@style/input.maroon.text"
            android:inputType="textPassword"
            tools:ignore="Autofill,LabelFor"
            android:layout_marginTop="8dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_four"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_confirmation"
            style="@style/body.bold.maroon"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/edt_password_confirmation"
            style="@style/input.maroon.text"
            android:inputType="textPassword"
            tools:ignore="Autofill,LabelFor"
            android:layout_marginTop="8dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_four"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_save_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/btn_primary.maroon"/>

</androidx.constraintlayout.widget.ConstraintLayout>