<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="60dp"
    android:layout_marginTop="55dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none"
    tools:context=".view.cart.CartFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <TextView
                android:id="@+id/tvListCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listcart"
                style="@style/body.bold.maroon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_list_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/tvListCart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvTotalPriceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/total_price"
                style="@style/body.bold.maroon"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:layout_constraintTop_toBottomOf="@id/rv_list_cart"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tvTotalPrice"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_price"
                style="@style/header.color_two"
                android:layout_marginTop="@dimen/dimen_8dp"
                app:layout_constraintTop_toBottomOf="@id/tvTotalPriceText"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:visibility="invisible"
                android:id="@+id/btn_checkout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_now"
                style="@style/btn_primary.maroon"
                android:padding="10dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:layout_constraintTop_toBottomOf="@id/rv_list_cart"
                app:layout_constraintBottom_toBottomOf="@id/tvTotalPrice"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.core.widget.NestedScrollView>