<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_main_product"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:layout_marginBottom="8dp"
        android:layout_margin="6dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <LinearLayout
                android:id="@+id/layout_trans"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/btn_cart_delete"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/no_trans_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/mont_bold"
                    android:text="@string/nomor_transaksi"
                    android:textColor="@color/color_two" />

                <TextView
                    android:id="@+id/no_trans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mont_light"
                    android:text="12341"
                    android:textColor="@color/color_two"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/date_order_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/mont_bold"
                    android:text="@string/date_order"
                    android:textColor="@color/color_two" />

                <TextView
                    android:id="@+id/date_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mont_light"
                    android:text="19/09/2020"
                    android:textColor="@color/color_two"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_order_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/mont_bold"
                    android:text="@string/total_order"
                    android:textColor="@color/color_two" />

                <TextView
                    android:id="@+id/total_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mont_light"
                    android:text="100000"
                    android:textColor="@color/color_two"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/status_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/mont_bold"
                    android:text="@string/status"
                    android:textColor="@color/color_two" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mont_light"
                    android:text="Belum Di Proses"
                    android:textColor="@color/color_two"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:visibility="invisible"
                android:enabled="false"
                android:id="@+id/btn_detail_trans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/btn_primary.maroon"
                android:padding="3dp"
                android:layout_gravity="right"
                android:layout_marginTop="8dp"
                android:background="@color/color_two"
                android:text="@string/lihat_detail"
                android:textAllCaps="false"
                android:textColor="@color/color_five"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>